Bug 1296658: Attempt to create the correct BackendType buffers for a LayerManager. r=jrmuizel

MozReview-Commit-ID: 14Eg8FC6OpJ